Adjust Dpkg::Changelog::parse_changelog() search list of parser
* scripts/Dpkg/Changelog.pm (parse_changelog): Fallback
into /usr/lib/dpkg/parsechangelog to find a changelog parser
in case $dpkglibdir points to another directory (for example
when DPKG_DATADIR is manually set).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-02-20  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/Dpkg/Changelog.pm (parse_changelog): Fallback
+	into /usr/lib/dpkg/parsechangelog to find changelog parser
+	in case $dpkglibdir points to another directory (for example
+	when DPKG_DATADIR is manually set).
+
 2008-02-19  Frank Lichtenheld  <djpig@debian.org>
 
 	* m4/libs.m4 (DPKG_LIB_CURSES): Use libncursesw if
