Fix make check to work on systems without dpkg in the standard PATH
* scripts/Makefile.am: Modify PATH to include build directories
containing the dpkg binary and the related scripts. That way
the tests work even if dpkg is not yet available. Thanks to
Mike Frysinger <vapier@gentoo.org> who noticed that.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-02-22  Raphael Hertzog  <hertzog@debian.org>
+	    Mike Frysinger <vapier@gentoo.org>
+
+	* scripts/Makefile.am: Modify PATH during make check to include
+	build directories containing dpkg and the scripts dpkg-*.
+
 2008-02-20  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Dpkg/Changelog.pm (parse_changelog): Fallback
