* debian/*.lintian-overrides: Add some new overrides, drop unused ones

--- a/debian/changelog
+++ b/debian/changelog
@@ -37,6 +37,9 @@ dpkg (1.14.17) UNRELEASED; urgency=low
     for spotting this. Closes: #465651
   * Change PATH during make check to look into build directories containing
     dpkg and the related scripts. Thanks to Mike Frysinger. Closes: #466957
+  * Some lintian cleanup:
+    - add overrides for some useless I: tags
+    - drop unused overrides
 
   [ Frank Lichtenheld ]
   * Add a warning in dpkg-buildpackage if the build-dependencies are not
