Fix usage of hyphens in some manual pages
* man/deb-symbols.5: Escape some hyphens so that they
are not used as minus sign.
* man/dpkg-architecture.1: Same.
* man/dpkg-shlibdeps.1: Same.
* man/start-stop-daemon.8: Same.

--- a/debian/changelog
+++ b/debian/changelog
@@ -40,6 +40,7 @@ dpkg (1.14.17) UNRELEASED; urgency=low
   * Some lintian cleanup:
     - add overrides for some useless I: tags
     - drop unused overrides
+    - updated several manual pages to fix hyphen-used-as-minus-sign
 
   [ Frank Lichtenheld ]
   * Add a warning in dpkg-buildpackage if the build-dependencies are not
