--- a/man/dpkg-shlibdeps.1
+++ b/man/dpkg-shlibdeps.1
@@ -295,13 +295,13 @@ of the binary to avoid problems.
 
 Calling
 .B dpkg\-shlibdeps
-in verbose mode (-v) will provide much more information about where it
+in verbose mode (\-v) will provide much more information about where it
 tried to find the dependency information. This might be useful if you
 don't understand why it's giving you this error.
 .SH "SEE ALSO"
 .BR deb\-shlibs (5),
 .BR deb\-symbols (5),
-.BR dpkg-gensymbols (1).
+.BR dpkg\-gensymbols (1).
 .
 .SH AUTHORS
 Copyright (C) 1995-1996 Ian Jackson
