--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -2,6 +2,9 @@
 
 	* po/po4a.cfg: Add deb-symbols.5 in the list of manual pages to
 	translate.
+	* deb-symbols.5, dpkg-architecture.1, dpkg-shlibdeps.1,
+	start-stop-daemon.8: Espace some hyphens so that they do
+	not end up as minus sign.
 
 2008-02-19  Frank Lichtenheld  <djpig@debian.org>
 
