--- a/man/deb-symbols.5
+++ b/man/deb-symbols.5
@@ -37,7 +37,7 @@ etc.
 Each entry for a library can also have some fields of meta-information.
 Those fields are stored on lines starting with an asterisk. Currently,
 the only valid field is \fIBuild-Depends-Package\fR, it indicates the name
-of the "-dev" package associated to the library and is used by
+of the "\-dev" package associated to the library and is used by
 dpkg-shlibdeps to make sure that the dependency generated is at least as
 strict as the corresponding build dependency.
 .SH EXAMPLES
