Fix groff in some manual pages
* man/dpkg-gensymbols.1: Fix some groff errors detected by lintian.
* man/dpkg-query.1: Same.

--- a/debian/changelog
+++ b/debian/changelog
@@ -41,6 +41,7 @@ dpkg (1.14.17) UNRELEASED; urgency=low
     - add overrides for some useless I: tags
     - drop unused overrides
     - updated several manual pages to fix hyphen-used-as-minus-sign
+    - fixed manpage-has-errors-from-man in several manual pages
 
   [ Frank Lichtenheld ]
   * Add a warning in dpkg-buildpackage if the build-dependencies are not
