--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,5 +1,10 @@
 2008-02-22  Raphael Hertzog  <hertzog@debian.org>
 
+	* dpkg-gensymbols.1: Fix some groff errors detected by lintian.
+	* dpkg-query.1: Same.
+
+2008-02-22  Raphael Hertzog  <hertzog@debian.org>
+
 	* po/po4a.cfg: Add deb-symbols.5 in the list of manual pages to
 	translate.
 	* deb-symbols.5, dpkg-architecture.1, dpkg-shlibdeps.1,
