--- a/debian/changelog
+++ b/debian/changelog
@@ -42,6 +42,10 @@ dpkg (1.14.17) UNRELEASED; urgency=low
     - drop unused overrides
     - updated several manual pages to fix hyphen-used-as-minus-sign
     - fixed manpage-has-errors-from-man in several manual pages
+  * Removed old upgrade code from dpkg's preinst and postinst which only
+    concerns upgrading from dpkg version older than the one in oldstable
+    already. And thus we get rid of old the last usage of read in those
+    scripts (fixes lintian's warning read-in-maintainer-script).
 
   [ Frank Lichtenheld ]
   * Add a warning in dpkg-buildpackage if the build-dependencies are not
