Updated Polish translation.

--- a/debian/changelog
+++ b/debian/changelog
@@ -63,6 +63,7 @@ dpkg (1.14.17) UNRELEASED; urgency=low
 
   [ Updated dpkg translations ]
   * Korean (Changwoo Ryu).
+  * Polish (Robert Luberda).
   * Romanian (Eddy Petrișor).
 
   [ Updated manpages translations ]
@@ -70,9 +71,11 @@ dpkg (1.14.17) UNRELEASED; urgency=low
 
   [ Updated scripts translations ]
   * German (Helge Kreutzmann).
+  * Polish (Robert Luberda).
   * Swedish (Peter Karlsson).
 
   [ Updated dselect translations ]
+  * Polish (Robert Luberda).
   * Romanian (Eddy Petrișor).
 
  -- Eddy Petrișor <eddy.petrisor@gmail.com>  Sat, 09 Feb 2008 13:22:38 +0200
