--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-02-24  Robert Luberda <robert@debian.org>
+
+	* pl.po: Recoded to UTF-8.
+	* pl.po: Updated to 286t.
+
 2008-02-09  Eddy Petrișor <eddy.petrisor@gmail.com>
 
 	* ro.po: 285t
