--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2008-02-24  Robert Luberda <robert@debian.org>
+
+	* pl.po: Recoded to UTF-8.
+	* pl.po: Updated to 1344t13f103u.
+
 2008-02-22  Raphael Hertzog  <hertzog@debian.org>
 
 	* dpkg-gensymbols.1: Fix some groff errors detected by lintian.
