Updated Swedish translations.
man/po/sv.po: Updated to 1461t0f0u.
po/sv.po: Regenerated and updated to 921t0f0u.
scripts/po/sv.po: Regenerated and updated to 489t0f0u.

--- a/debian/changelog
+++ b/debian/changelog
@@ -65,10 +65,12 @@ dpkg (1.14.17) UNRELEASED; urgency=low
   * Korean (Changwoo Ryu).
   * Polish (Robert Luberda).
   * Romanian (Eddy Petrișor).
+  * Swedish (Peter Karlsson).
 
   [ Updated manpages translations ]
   * German (Helge Kreutzmann).
   * Polish (Robert Luberda).
+  * Swedish (Peter Karlsson).
 
   [ Updated scripts translations ]
   * German (Helge Kreutzmann).
