--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-26  Peter Karlsson  <peterk@debian.org>
+
+	* po/sv.po: Updated to 1461t.
+
 2008-02-24  Robert Luberda <robert@debian.org>
 
 	* pl.po: Recoded to UTF-8.
