Add bug closure fo the Basque update to dselect

--- a/debian/changelog
+++ b/debian/changelog
@@ -64,13 +64,16 @@ dpkg (1.14.17) UNRELEASED; urgency=low
   [ Updated dpkg translations ]
   * Korean (Changwoo Ryu).
   * Polish (Robert Luberda).
-  * Romanian (Eddy Petrișor).
+  * Romanian (Eddy Petri?or).
   * Swedish (Peter Karlsson).
 
   [ Updated manpages translations ]
   * German (Helge Kreutzmann).
   * Polish (Robert Luberda).
   * Swedish (Peter Karlsson).
+
+  [ Updated dselect translations ]
+  * Basque. (Piarres beobide). Closes: #462403
 
   [ Updated scripts translations ]
   * German (Helge Kreutzmann).
@@ -79,9 +82,9 @@ dpkg (1.14.17) UNRELEASED; urgency=low
 
   [ Updated dselect translations ]
   * Polish (Robert Luberda).
-  * Romanian (Eddy Petrișor).
+  * Romanian (Eddy Petri?or).
 
- -- Eddy Petrișor <eddy.petrisor@gmail.com>  Sat, 09 Feb 2008 13:22:38 +0200
+ -- Eddy Petri?or <eddy.petrisor@gmail.com>  Sat, 09 Feb 2008 13:22:38 +0200
 
 dpkg (1.14.16.6) unstable; urgency=medium
 
