Actually close the bug

--- a/debian/changelog
+++ b/debian/changelog
@@ -62,7 +62,8 @@ dpkg (1.14.17) UNRELEASED; urgency=low
   * Link dselect against libncursesw. Closes: #466321
   * Forward port a patch from the old changelog parser to the new
     one that got lost during the transition. '+' and '.' can now
-    be used in distribution names yet again. Closes: XXX
+    be used in distribution names yet again. Reported by dann frazier.
+    Closes: #467470
 
   [ Updated dpkg translations ]
   * Korean (Changwoo Ryu).
