Fix small memory leaks

--- a/THANKS
+++ b/THANKS
@@ -145,6 +145,7 @@ SZERVÁC Attila <sas@321.hu>
 Samuel Thibault <samuel.thibault@ens-lyon.org>
 Scott Barker <scott@mostlylinux.ab.ca>
 Scott James Remnant <scott@netsplit.com>
+Sean Finney <seanius@seanius.net>
 Sergio Gelato <Sergio.Gelato@astro.su.se>
 Stefano Canepa <sc@linux.it>
 Stepan Golosunov <stepan@golosunov.pp.ru>
