--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-03-06  Sean Finney  <seanius@seanius.net>
+
+	* lib/dump.c (writedb): Free newfn and oldfn.
+	* src/help.c (clear_istobes): Free pkgiterator 'it' by calling
+	iterpkgend.
+
 2008-03-02  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/dpkg-gencontrol.pl, scripts/dpkg-source.pl:
