--- a/man/dpkg-gencontrol.1
+++ b/man/dpkg-gencontrol.1
@@ -1,4 +1,4 @@
-.TH dpkg\-gencontrol 1 "2007-06-12" "Debian Project" "dpkg utilities"
+.TH dpkg\-gencontrol 1 "2008-03-02" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-gencontrol \- generate Debian control files
 .
@@ -10,8 +10,7 @@ dpkg\-gencontrol \- generate Debian control files
 .B dpkg\-gencontrol
 reads information from an unpacked Debian source tree and generates a
 binary package control file (which defaults to debian/tmp/DEBIAN/control);
-during this process it will simplify the relation fields and rewrite them
-in a sorted manner.
+during this process it will simplify the relation fields.
 .sp
 Thus
 .IR Pre-Depends ", " Depends ", " Recommends " and " Suggests
@@ -20,7 +19,11 @@ order by removing dependencies which are known to be true according to the
 stronger dependencies already parsed. It will also remove any self-dependency
 (in fact it will remove any dependency which evaluates to true given the
 current version of the package as installed). Logically it keeps the
-intersection of multiple dependencies on the same package.
+intersection of multiple dependencies on the same package. The order
+of dependencies is preserved as best as possible: if any dependency
+must be discarded due to another dependency appearing further
+in the field, the superseding dependency will take the place of the
+discarded one.
 .sp
 The other relation fields
 .RI ( Enhances ", " Conflicts ", " Breaks ", " Replaces " and " Provides )
@@ -139,7 +142,7 @@ Copyright (C) 1995-1996 Ian Jackson
 .br
 Copyright (C) 2000 Wichert Akkerman
 .br
-Copyright (C) 2007 Rapha\[:e]l Hertzog
+Copyright (C) 2007-2008 Rapha\[:e]l Hertzog
 .sp
 This is free software; see the GNU General Public Licence version 2 or later
 for copying conditions. There is NO WARRANTY.
