--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* th.po: Updated to 921t.
+
 2008-02-26  Peter Karlsson  <peterk@debian.org>
 
 	* sv.po: Updated to 921t.
@@ -7,7 +11,7 @@
 	* pl.po: Recoded to UTF-8
 	* pl.po: Updated to 921t.
 
-2008-02-09  Eddy Petrișor <eddy.petrisor@gmail.com>
+2008-02-09  Eddy Petri?or <eddy.petrisor@gmail.com>
 
 	* ro.po: Update to 927t.
 
