Restore eddyp's cedilla again

--- a/debian/changelog
+++ b/debian/changelog
@@ -77,7 +77,7 @@ dpkg (1.14.17) UNRELEASED; urgency=low
   [ Updated dpkg translations ]
   * Korean (Changwoo Ryu).
   * Polish (Robert Luberda).
-  * Romanian (Eddy Petri?or).
+  * Romanian (Eddy Petrișor).
   * Swedish (Peter Karlsson).
   * Thai (Theppitak Karoonboonyanan). Closes: 468916
 
@@ -96,7 +96,7 @@ dpkg (1.14.17) UNRELEASED; urgency=low
 
   [ Updated dselect translations ]
   * Polish (Robert Luberda).
-  * Romanian (Eddy Petri?or).
+  * Romanian (Eddy Petrișor).
 
  -- Frank Lichtenheld <djpig@debian.org>  Fri, 29 Feb 2008 18:34:54 +0100
 
@@ -619,7 +619,7 @@ dpkg (1.14.7) unstable; urgency=low
   * German (Sven Joachim). Closes: #440537
   * Nepali (Shiva Prasad Pokharel). Closes: #437825
   * Portuguese (Miguel Figueiredo). Closes: #441113
-  * Romanian (Eddy Petri?or).
+  * Romanian (Eddy Petrișor).
   * Vietnamese (Clytie Siddall). Closes: #440502
   * Korean (Sunjae Park). Closes: #443190
 
