Dpkg::Fields::Object: Import Dpkg::Gettext
* scripts/Dpkg/Fields.pm: Import Dpkg::Gettext since the output() method
uses _g().

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-07  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/Dpkg/Fields.pm: Import Dpkg::Gettext since we use _g().
+
 2008-03-06  Sean Finney  <seanius@seanius.net>
 
 	* lib/dump.c (writedb): Free newfn and oldfn.
