--- a/debian/changelog
+++ b/debian/changelog
@@ -35,8 +35,9 @@ dpkg (1.14.17) UNRELEASED; urgency=low
     about.
   * Handle the case when the library has a different SONAME than the one used
     to find it. Closes: #462413
-  * Fix Dpkg::Version to import _g() from Dpkg::Gettext. Thanks to Adam Heath
-    for spotting this. Closes: #465651
+  * Fix Dpkg::Version and Dpkg::Fields::Object to import _g() from
+    Dpkg::Gettext. Thanks to Adam Heath and Olivier Berger for spotting
+    this. Closes: #465651
   * Change PATH during make check to look into build directories containing
     dpkg and the related scripts. Thanks to Mike Frysinger. Closes: #466957
   * Some lintian cleanup:
