Update Polish translations and fix po4a errors in other languages' translations
* po/pl.po: Apply some fixes suggested by Wiktor Wandachowicz.
* */pl.po: Consistently use Polish quotation marks in translations.
* man/{de.po, hu.po, sv.po}: Fix a few broken messages, that caused the
newest po4a to die with the `Unknown '<' or '>' sequence' error.

--- a/man/po/de.po
+++ b/man/po/de.po
@@ -2184,7 +2184,7 @@ msgid ""
 "B<flags>. These values are intended to be changed mainly with B<dselect>."
 msgstr ""
 "B<dpkg> verwaltet einige nützliche Informationen über verfügbare Pakete. Die "
-"Informationen sind in drei Klassen unterteilt: B<Status>, <Auswahlstatus> "
+"Informationen sind in drei Klassen unterteilt: B<Status>, B<Auswahlstatus> "
 "und B<Schalter>. Diese Werte sind Hauptsächlich zur Änderung durch "
 "B<dselect> gedacht."
 
@@ -6726,11 +6726,11 @@ msgstr ""
 "Diese Handbuchseite dokumentiert das B<dpkg-name>-Programm, das eine "
 "einfache Möglichkeit bereitstellt, B<Debian>-Pakete in ihren vollen "
 "Paketnamen umzubenennen. Ein voller Paketname besteht aus "
-"I<E<lt>PaketE<gt>_E<lt>VersionE<gt>_E<lt>ArchitekturE<gt>.E<lt>Pakettyp<gt>> "
+"I<E<lt>PaketE<gt>_E<lt>VersionE<gt>_E<lt>ArchitekturE<gt>.E<lt>PakettypE<gt>> "
 "wie in der Steuerdatei des Pakets spezifiziert. Der I<E<lt>VersionE<gt>>-"
 "Teil des Dateinamens besteht aus der Versionsinformation der Originalautoren "
 "optional gefolgt von einem Gedankenstrich und der Revisionsinformation. Der "
-"I<E<lt>Pakettyp<gt>>-Teil entstammt dem Feld I<package_type> (falls "
+"I<E<lt>PakettypE<gt>>-Teil entstammt dem Feld I<package_type> (falls "
 "vorhanden) oder wird auf B<deb> gesetzt."
 
 # type: TP
@@ -6794,10 +6794,10 @@ msgstr ""
 "existierende Verzeichnis existiert, dann werden die Dateien in das "
 "Verzeichnis verschoben, andernfalls wird das Zielverzeichnis aus dem Section-"
 "Feld des Steuerteils des Pakets extrahiert. Das Zielverzeichnis wird "
-"»unstable/binary-E<lt>ArchitekturE<gt>/E<lt>Bereich<gt>« sein. Falls der "
+"»unstable/binary-E<lt>ArchitekturE<gt>/E<lt>BereichE<gt>« sein. Falls der "
 "Bereich nicht in der Steuerdatei gefunden werden kann, dann wird »no-section« "
 "angenommen, und in diesem Fall, wie auch für die Bereiche »non-free« und "
-"»contrib« ist das Zielverzeichnis »E<lt>Bereich<gt>/binary-"
+"»contrib« ist das Zielverzeichnis »E<lt>BereichE<gt>/binary-"
 "E<lt>ArchitekturE<gt>«. Das Bereichsfeld muss nicht angegeben werden, daher "
 "werden viele Pakete ihren Weg in das »no-section«-Gebiet finden. Verwenden "
 "Sie diese Option mit Vorsicht, sie ist unordentlich."
@@ -6901,7 +6901,7 @@ msgid ""
 "installation tools might depend on this naming structure."
 msgstr ""
 "Einige Pakete folgen nicht der Namensstruktur "
-"E<lt>Paket<gt>_E<lt>VersionE<gt>_E<lt>ArchitekturE<gt>.deb. Pakete, die von "
+"E<lt>PaketE<gt>_E<lt>VersionE<gt>_E<lt>ArchitekturE<gt>.deb. Pakete, die von "
 "dpkg-name umbenannt wurden, folgen dieser Struktur. Im allgemeinen hat diese "
 "keinen Einfluss darauf, wie Pakete von B<dselect>(1)/B<dpkg>(1) installiert "
 "werden, aber andere Installationswerkzeuge können von dieser "
@@ -7724,7 +7724,7 @@ msgid ""
 "B<dpkg-scansources> scans the given I<binary-dir> for I<.dsc> files.  These "
 "are used to create a Debian source index, which is output to stdout."
 msgstr ""
-"<dpkg-scansources> durchsucht das übergebene I<Binär-Verz> nach I<.dsc>-"
+"B<dpkg-scansources> durchsucht das übergebene I<Binär-Verz> nach I<.dsc>-"
 "Dateien. Diese werden verwendet, um einen Debian-Quell-Index zu erstellen, "
 "der auf der Standardausgabe ausgegeben wird."
 
