--- a/man/po/hu.po
+++ b/man/po/hu.po
@@ -970,7 +970,7 @@ msgid ""
 "package, if this one also has the same files as the conflicted package."
 msgstr ""
 "Az e csomag által lecserélt csomag fájlok listája.  Ez lehetővé teszi e "
-"csomagnak más csomag fájljainak felülírását és általában a <Conflicts> "
+"csomagnak más csomag fájljainak felülírását és általában a B<Conflicts> "
 "mezővel használatos a másik csomag törlésére, ha ez azonos nevű fájlt "
 "tartalmaz, mint az ütköző csomag."
 
