--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-03-09 Robert Luberda <robert@debian.org>
+
+	* pl.po: Updated to 490t.
+	* pl.po: Consistently use Polish quotation marks in translations.
+
 2008-02-26  Peter Karlsson  <peterk@debian.org>
 
 	* sv.po: Updated to 489t.
