--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-03-09  Robert Luberda <robert@debian.org>
+
+	* pl.po: Apply some fixes suggested by Wiktor Wandachowicz.
+	* pl.po: Consistently use Polish quotation marks in translations.
+
 2008-03-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* th.po: Updated to 921t.
