Refactor fgets checking code into fgets_must and fgets_checked functions

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-03-11  Ian Jackson  <ian@davenant.greenend.org.uk>
+
+	* lib/dpkg.h (fgets_checked, fgets_must): New function declarations.
+	* lib/utils.c: Include <string.h>.
+	(fgets_checked, fgets_must): New function.
+	* src/filesdb.c (ensure_diversions): Use new fgets_checked and
+	fgets_must instead of duped code.
+
 2008-03-09  Ian Jackson  <ian@davenant.greenend.org.uk>
 
 	* dselect/pkgdisplay.cc (relatestrings): Change 'breaks with' to
