--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2008-03-11  Guillem Jover  <guillem@debian.org>
+
+	* lib/Makefile.am (libdpkg_a_SOURCES): Add 'dpkg-def.h'.
+	* lib/dpkg.h: Include 'dpkg-def.h'.
+	(CONSTANT, PRINTFFORMAT, NONRETURNING, UNUSED): Move defninitions
+	to ...
+	* lib/dpkg-def.h: ... here. New file.
+	* utils/start-stop-daemon.c: Include 'dpkg-def.h'.
+	(CONSTANT, PRINTFFORMAT, NONRETURNING, UNUSED): Remove defninitions.
+
 2008-03-11  Ian Jackson  <ian@davenant.greenend.org.uk>
 
 	* lib/dpkg.h (fgets_checked, fgets_must): New function declarations.
