Move and replace showcopyright prototype from showcright.c to dpkg.h

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-03-11  Guillem Jover  <guillem@debian.org>
 
+	* lib/showcright.c (showcopyright): Move function prototype to ...
+	* lib/dpkg.h: ... here, and replace existing one.
+
+2008-03-11  Guillem Jover  <guillem@debian.org>
+
 	* lib/Makefile.am (libdpkg_a_SOURCES): Add 'dpkg-def.h'.
 	* lib/dpkg.h: Include 'dpkg-def.h'.
 	(CONSTANT, PRINTFFORMAT, NONRETURNING, UNUSED): Move defninitions
