Start updated of German man page translation

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-11  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* po/de.po: Updated to 1401t4f56u.
+
 2008-03-09  Robert Luberda <robert@debian.org>
 
 	* pl.po: Updated to 1356t13f93u.
